--- a/public/modules/invoices/invoices.html
+++ b/public/modules/invoices/invoices.html
@@ -92,7 +92,7 @@
                                             Discount (%)
                                         </td>
                                         <td class="form-group">
-                                            <input class="form-control" style="text-align:center;" ng-model="var.invoice.discount" ng-change="fn.updateCustomers()">
+                                            <input class="form-control" style="text-align:center;" ng-model="var.invoice.discount" ng-blur="fn.updateCustomers()">
                                         </td>
                                         <td></td>
                                         <td >
