--- a/public/modules/products/products.html
+++ b/public/modules/products/products.html
@@ -1,12 +1,15 @@
 <h3>Products</h3>
 <div>
-    <div><button class="btn" ng-click='fn.newProduct()' style="float:right;">Add Product</button></div>
+    <div><button class="btn btn-default btn-sm pull-right" ng-click='fn.newProduct()' style="float:right;">Add Product</button></div>
 </div>
 <div class="table-responsive">
     <table class='table'>
+    <thead>
         <th>Product Id</th>
         <th>Product Name</th>
         <th>Price</th>
+    </thead>
+    <tbody>
         <tr ng-repeat='p in var.products'>
             <td>{{p.id}}</td>
             <td>{{p.name}}</td>
@@ -24,6 +27,7 @@
         <tr ng-if='var.products==undefined'>
             <td colspan="100%" style="text-align:center;">Loading...</td>
         </tr>
+    </tbody>
     </table>
 </div>
 
