--- a/public/modules/customers/customers.html
+++ b/public/modules/customers/customers.html
@@ -24,7 +24,7 @@
             </td>
         </tr>
         <tr ng-if='var.customers.length<=0'>
-            <td colspan="100%" style="text-align:center;">No invoice</td>
+            <td colspan="100%" style="text-align:center;">No customer</td>
         </tr>
         <tr ng-if='var.customers==undefined'>
             <td colspan="100%" style="text-align:center;">Loading...</td>
