--- a/public/modules/products/products.html
+++ b/public/modules/products/products.html
@@ -22,7 +22,7 @@
             </td>
         </tr>
         <tr ng-if='var.products.length<=0'>
-            <td colspan="100%" style="text-align:center;">No invoice</td>
+            <td colspan="100%" style="text-align:center;">No product</td>
         </tr>
         <tr ng-if='var.products==undefined'>
             <td colspan="100%" style="text-align:center;">Loading...</td>
